@@ -216,6 +216,11 @@
 /parsing/parser.automaton
 /parsing/parser.conflicts
 
+/patches/*.reverse
+/patches/*.patched
+# Prevent patches being accidentally checked in!
+/patches/*.patch
+
 /stdlib/camlheader
 /stdlib/target_camlheader
 /stdlib/camlheader[di]
