@@ -85,6 +85,7 @@ LIBUNWIND_AVAILABLE=false
 LIBUNWIND_LINK_FLAGS=
 PROFINFO_WIDTH=26
 SAFE_STRING=false
+PATCH_FLAGS=--binary
 
 ########## Configuration for the bytecode compiler
 
